feat(auth): implement auth flow
