# cmd/api/docs/swagger.json
@@ -316,63 +316,6 @@
                 }
             }
         },
-        "/auth/profile/address": {
-            "put": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Update address details for a registered user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "profile"
-                ],
-                "summary": "Update address details",
-                "parameters": [
-                    {
-                        "description": "Address details",
-                        "name": "addressDetails",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.RegisterAddressDetailsRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Address details updated successfully",
-                        "schema": {
-                            "$ref": "#/definitions/response.SuccessResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/auth/profile/business": {
             "put": {
                 "security": [
@@ -462,6 +405,63 @@
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/profile/personal-details": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Update personal details for a registered user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "profile"
+                ],
+                "summary": "Update personal details",
+                "parameters": [
+                    {
+                        "description": "Personal details",
+                        "name": "personalDetails",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.RegisterPersonalDetailsRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Personal details updated successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
                         }
                     },
                     "401": {
@@ -1090,6 +1090,63 @@
                 }
             }
         },
+        "/users/employee/profile/complete": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Update address details for a registered user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "profile"
+                ],
+                "summary": "Update address details",
+                "parameters": [
+                    {
+                        "description": "Address details",
+                        "name": "addressDetails",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.RegisterAddressDetailsRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Address details updated successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users/profile": {
             "get": {
                 "security": [
@@ -1113,55 +1170,6 @@
                         "description": "User profile",
                         "schema": {
                             "$ref": "#/definitions/response.UserResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Update authenticated user's profile information",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Update user profile",
-                "parameters": [
-                    {
-                        "description": "Profile data to update",
-                        "name": "profile",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.UpdateProfileRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Updated user profile",
-                        "schema": {
-                            "$ref": "#/definitions/response.UserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
                         }
                     },
                     "401": {
@@ -1276,9 +1284,6 @@
         },
         "request.LoginRequest": {
             "type": "object",
-            "required": [
-                "web_auth_token"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -1286,15 +1291,6 @@
                 "password": {
                     "type": "string",
                     "minLength": 8
-                },
-                "provider": {
-                    "type": "string"
-                },
-                "provider_id": {
-                    "type": "string"
-                },
-                "web_auth_token": {
-                    "type": "string"
                 }
             }
         },
@@ -1322,6 +1318,7 @@
             "required": [
                 "city",
                 "country",
+                "nationality",
                 "postal_code",
                 "user_address"
             ],
@@ -1330,6 +1327,18 @@
                     "type": "string"
                 },
                 "country": {
+                    "type": "string"
+                },
+                "date_of_birth": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "nationality": {
+                    "type": "string"
+                },
+                "phone_number": {
                     "type": "string"
                 },
                 "postal_code": {
@@ -1372,12 +1381,38 @@
                 }
             }
         },
+        "request.RegisterPersonalDetailsRequest": {
+            "type": "object",
+            "required": [
+                "nationality"
+            ],
+            "properties": {
+                "date_of_birth": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "nationality": {
+                    "type": "string"
+                },
+                "personal_account_type": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                }
+            }
+        },
         "request.RegisterUserRequest": {
             "type": "object",
             "required": [
                 "web_auth_token"
             ],
             "properties": {
+                "account_type": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -1394,9 +1429,6 @@
                 "provider": {
                     "type": "string"
                 },
-                "provider_id": {
-                    "type": "string"
-                },
                 "web_auth_token": {
                     "type": "string"
                 }
@@ -1409,40 +1441,6 @@
             ],
             "properties": {
                 "session_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "request.UpdateProfileRequest": {
-            "type": "object",
-            "required": [
-                "first_name",
-                "last_name",
-                "nationality"
-            ],
-            "properties": {
-                "company_website": {
-                    "type": "string"
-                },
-                "employment_type": {
-                    "type": "string"
-                },
-                "first_name": {
-                    "type": "string"
-                },
-                "gender": {
-                    "type": "string"
-                },
-                "job_role": {
-                    "type": "string"
-                },
-                "last_name": {
-                    "type": "string"
-                },
-                "nationality": {
-                    "type": "string"
-                },
-                "residential_country": {
                     "type": "string"
                 }
             }
