# internal/adapters/routers/auth_router.go
@@ -41,7 +41,6 @@ func RegisterAuthRoutes(router *gin.Engine, authHandler *handlers.AuthHandler, t
     {
         // User profile completion
         authenticatedRoutes.PUT("/profile/personal-details", authHandler.UpdatePersonalDetails)
-        // authenticatedRoutes.PUT("/profile/address", authHandler.UpdateAddressDetails)
         authenticatedRoutes.PUT("/profile/business", authHandler.UpdateBusinessDetails)
         authenticatedRoutes.GET("/profile/completion", authHandler.GetProfileCompletion)
 
